--- a/app/src/main/res/layout/item_aclist.xml
+++ b/app/src/main/res/layout/item_aclist.xml
@@ -10,7 +10,8 @@
         android:orientation="horizontal"
         android:padding="0dp"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:id="@+id/acimage"
