--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -197,7 +197,7 @@
                 android:paddingEnd="2dp"
                 app:flow_horizontalAlign="start"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="wrap_content"
                 tools:ignore="MissingConstraints">
 
                 <FrameLayout
@@ -215,7 +215,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="3"
                     android:layout_margin="0dp"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:id="@+id/firstaclogo"
@@ -233,9 +233,10 @@
                         android:layout_height="match_parent"
                         android:textAlignment="center"
                         android:textSize="12sp"
-                        android:layout_margin="0dp"
                         android:padding="0dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginEnd="4dp"
+                        android:layout_marginBottom="1dp"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
@@ -504,7 +505,7 @@
                 android:paddingStart="50dp"
                 android:paddingEnd="50dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="50dp"
                 android:layout_gravity="center_horizontal"
                 android:shadowColor="@color/staff_blue"
                 android:textColor="@color/white"
