--- a/app/src/main/res/layout/item_directlist.xml
+++ b/app/src/main/res/layout/item_directlist.xml
@@ -97,7 +97,7 @@
                     android:padding="0dp"
                     android:layout_margin="0dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <!--5-->
                     <LinearLayout
@@ -106,7 +106,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="3"
                         android:layout_margin="0dp"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <ImageView
                             android:id="@+id/aclogo"
@@ -121,12 +121,13 @@
                         <TextView
                             android:id="@+id/acname"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:textAlignment="center"
                             android:textSize="12sp"
-                            android:layout_margin="0dp"
                             android:padding="0dp"
-                            android:layout_marginBottom="10dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginBottom="1dp"
                             android:textColor="@color/black" />
 
                     </LinearLayout>
