--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="50dp"
-    tools:context=".ui.history.SettingFragment">
+    tools:context=".ui.history.HistoryFragment">
 
     <LinearLayout
         android:background="@color/white"
